--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/loffar logo 2.png" />
+  <link href="https://fonts.cdnfonts.com/css/panton-rust-heavy" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Passero+One&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Loffar Frog</title>
 </head>
